--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup:otto:1.3.8'
-
+    compile 'com.google.android.gms:play-services:8.1.0'
 
 }
