--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
-
     <application
         android:name="assignment.example.lifesafe.com.placesnerby.MyApplication"
         android:allowBackup="true"
@@ -16,14 +15,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-
-        <activity android:name=".NerbyPlace" >
+        <activity android:name=".NerbyPlace"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+         <service android:name=".LocationService"
+                   android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
